<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/search_icon"
        android:title="Search For Adverts"
        android:icon="@android:drawable/ic_menu_search"
        android:visible="true"
        android:menuCategory="container"
        app:showAsAction="always"></item>


    <item android:id="@+id/add_icon"
        android:title="Post New Advert"
        android:icon="@android:drawable/ic_menu_add"
        android:visible="true"
        android:menuCategory="container"
        app:showAsAction="always"></item>


    <item android:id="@+id/menu_about"
        android:title="@string/menu_about"
        android:icon="@android:drawable/ic_menu_add"
        android:visible="true"
        android:menuCategory="container"></item>

    <item android:id="@+id/menu_tips"
        android:title="@string/menu_tips"
        android:icon="@android:drawable/ic_menu_add"
        android:visible="true"
        android:menuCategory="container"></item>


    <item android:id="@+id/menu_exit"
        android:title="@string/menu_exit"
        android:icon="@android:drawable/ic_menu_add"
        android:visible="true"
        android:menuCategory="container"></item>

</menu>