<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="taffy.co.za.catalistclassifieds.SearchActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/splash_bg_color"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">
        
    </android.support.v7.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Paragraph 1 -->
            <TextView
                android:id="@+id/txtParagraph1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/about_parahraph1"
                android:textAlignment="textStart" />

            <!--Paragraph 2 -->
            <TextView
                android:id="@+id/txtParagraph2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/about_parahraph2"
                android:textAlignment="textStart" />

            <!--Paragraph 2 -->
            <TextView
                android:id="@+id/txtParagraph3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/about_parahraph3"
                android:textAlignment="textStart" />

            <!--Paragraph 2 -->
            <TextView
                android:id="@+id/txtParagraph4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/about_parahraph4"
                android:textAlignment="textStart" />
            <!-- Button Search-->
            <Button
                android:id="@+id/btnMoreAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="30dp"
                android:background="@android:color/holo_blue_dark"
                android:text="@string/btn_about"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
